[QCCR1E135161][Bug Hunting] AMB Drop down list frame is not visible

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -150,3 +150,8 @@ table {
 .grommetux-tiles:focus {
   outline: none;
 }
+
+.grommet.grommetux-drop:not([class*="background-color-index-"]) {
+  background: #fff;
+  box-shadow: 0 4px 4px #eee;
+}
